# devops-engineer-from-scratch-project-313

./: .gitignore  Makefile  README.md  pyproject.toml
