[project]
name = "devops-engineer-from-scratch-project-313"
version = "0.1.0"
description = "Simple FastAPI app for ping endpoint"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py"]
